package a4.io;

import "google/protobuf/descriptor.proto";

import "a4/io/A4.proto";

message StreamHeader
{
    option (fixed_class_id) = 100;
    required int32 a4_version = 1;
    optional string description = 2;

    // if metadata_refers_forward is true, metadata refer
    // to objects that follow them instead of precede them
    optional bool metadata_refers_forward = 5 [default=false];
}

message ClassCount
{
    required int32 class_id = 1;
    required int32 count = 2;
    optional string class_name = 3;
}

message StreamFooter
{
    option (fixed_class_id) = 102;

    // MUST be number of bytes written before the footer size byte
    required int64 size = 1;

    // MUST specify the offset from stream start of all metadata messages
    repeated int64 metadata_offsets = 2;

    // MUST specify the offset from stream start of all ProtoClass messages
    repeated int64 protoclass_offsets = 3;

    // MAY give information on class id numbers
    repeated ClassCount class_count = 4;
}

message StartCompressedSection
{
    option (fixed_class_id) = 104;
    enum Compression {
        ZLIB = 0;
        GZIP = 1;
        BZIP2 = 2;
        SNAPPY = 3;
    }
    optional Compression compression = 1;
}

message EndCompressedSection
{
    option (fixed_class_id) = 106;
}

message ProtoClass
{
    option (fixed_class_id) = 108;
    optional int32 class_id = 1;
    optional string full_name = 2;
    repeated google.protobuf.FileDescriptorProto file_descriptor = 3;
}

message TestEvent
{
    option (major_version) = "v2011.10";
    option (minor_version) = "fix42";
    option (patch_version) = "For my 83 run over the Data";

    optional int32 event_number = 1;
    optional double event_data = 2;
}

message TestRunLB
{
    optional int32 run = 1;
    optional int32 lumiblock = 2;
}

message TestMetaData
{
    option (major_version) = "v2011.10-MD";
    option (minor_version) = "fix42";
    option (patch_version) = "For my 83 run over the Data";

    optional int32 meta_data = 1 [(merge)=MERGE_ADD];
}

message TestMergeMetaDataStatic
{
    option (fixed_class_id) = 41;

    option (major_version) = "v2011.10-MD-MERGE";
    option (patch_version) = "For my 83 run over the Data";

    optional int32 meta_data = 1 [(merge)=MERGE_ADD];
}

message TestMergeMetaData
{
    option (fixed_class_id) = 41;

    option (major_version) = "v2011.10-MD-MERGE";
    option (patch_version) = "For my 83 run over the Data";

    optional int32 meta_data = 1 [(merge)=MERGE_ADD];
    repeated TestRunLB lumiblock = 2 [(merge)=MERGE_UNION];
    repeated int32 run = 9 [(merge)=MERGE_UNION];
    repeated int32 period = 3 [(merge)=MERGE_UNION];
    optional bool simulation = 4 [(merge)=MERGE_BLOCK_IF_DIFFERENT];
    repeated string comments = 5 [(merge)=MERGE_APPEND];
    optional string tags = 6 [(merge)=MERGE_ADD];
    optional double efficiency = 7 [(merge)=MERGE_MULTIPLY];
    optional bool error = 8 [(merge)=MERGE_AND];
}
